--- a/examples/load.htm
+++ b/examples/load.htm
@@ -41,10 +41,10 @@
             "city" : "UTRECHT"
         },
         
-        "contacts" : [
-            { "name" : "Node.js",      "like" : true },
-            { "id" : 2, "name" : "PHP",          "like" : true },
-            { "id" : 3, "name" : "Visual Basic", "like" : false }
+        "fruit" : [
+            { "name" : "Orange",     "like" : true },
+            { "name" : "Banana",     "like" : true },
+            { "name" : "Strawberry", "like" : true }
         ]
     }
             </pre></code>
